opam-version: "2.0"

name: "io7m-roctetorder"
version: "1.0.0"

authors: "Mark Raynsford <code@io7m.com>"
bug-reports: "https://github.com/io7m-com/roctetorder/issues"
dev-repo: "git+https://github.com/io7m-com/roctetorder/issues"
homepage: "https://www.io7m.com/software/roctetorder"
license: "ISC"
maintainer: "Mark Raynsford <code@io7m.com>"
synopsis: "Octet order theorems"

depends: [
  "rocq-prover" {>= "9.0.0"}
]

install: [
  ["mkdir" "-p" "%{lib}%/coq/user-contrib/com/io7m"]
  ["cp" "src/OctetOrder.v" "%{lib}%/coq/user-contrib/com/io7m/OctetOrder.v"]
]
